--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "npx sequelize db:migrate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "db-migrate-sqlite3": "^0.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
+    "pg": "^8.3.2",
     "redis": "^3.0.2",
     "sequelize": "^6.3.4",
+    "sequelize-cli": "^6.2.0",
     "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
   }
