--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "db-migrate-sqlite3": "^0.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.2",
     "redis": "^3.0.2",
     "sequelize": "^6.3.4",
