--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "db-migrate-sqlite3": "^0.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^4.0.4-beta.0",
     "express-jwt": "^6.0.0",
     "helmet": "^4.0.0",
+    "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.2",
     "redis": "^3.0.2",
