--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-joi-validation": "^4.0.4-beta.0",
     "express-jwt": "^6.0.0",
     "helmet": "^4.0.0",
+    "http-errors": "^1.8.0",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.2",
