--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx sequelize db:migrate",
     "migrate-down": "npx sequelize db:migrate:undo",
-    "pretest": "eslint --ignore-path .gitignore ."
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "eslint": "^7.7.0",
-    "eslint-config-strongloop": "^2.1.0"
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-strongloop": "^2.1.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
