--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon --max-old-space-size=2048 index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx sequelize db:migrate",
     "migrate-down": "npx sequelize db:migrate:undo",
@@ -16,21 +16,30 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "csv-parser": "^2.3.3",
+    "csv-stream": "^0.2.0",
     "db-migrate-sqlite3": "^0.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-joi-validation": "^4.0.4-beta.0",
     "express-jwt": "^6.0.0",
+    "fast-csv": "^4.3.1",
     "helmet": "^4.0.0",
     "http-errors": "^1.8.0",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "pg": "^8.3.2",
     "redis": "^3.0.2",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
     "sqlite": "^4.0.12",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
